fix: adjust outcome scores text spacing

--- a/src/components/Main/EventLog/EventLog.module.css
+++ b/src/components/Main/EventLog/EventLog.module.css
@@ -22,8 +22,11 @@
 }
 .outcomeContainer {
   display: flex;
+  flex-direction: row-reverse;
   align-self: flex-end;
-  gap: 1vw;
+}
+.outcome {
+  font-weight: bold;
 }
 
 @media (orientation: landscape) {
